kubernetes/01-k8s-distribution/rancher-rke/sqlite-pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sqlite3
  name: sqlite3
spec:
  volumes:
  - name: sqlite-vol
    persistentVolumeClaim:
      claimName: sqlitevol
  containers:
  - image: nouchka/sqlite3
    name: sqlite3
    resources: {}
    command: ["sleep", "1d"]
    
    volumeMounts:
    - name: sqlite-vol
      mountPath: /root/gort
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
